--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<meta name="author" content="Abdul Ahad">
 	<!-- Required end meta tags -->
 	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+	<link href="https://abdulahad.site" rel="canonical">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
