--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,16 @@
 	<meta name="author" content="Abdul Ahad">
 	<!-- Required end meta tags -->
 	<link rel="icon" href="assets/images/favicon.ico" type="image/png">
+	<link href="https://abdulahad.site/contact.html" rel="canonical">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMS9SQYP1B"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-MMS9SQYP1B');
+	</script>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
