--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,16 @@
 	<meta name="author" content="Abdul Ahad">
 	<!-- Required end meta tags -->
 	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+	<link href="https://abdulahad.site/profile.html" rel="canonical">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMS9SQYP1B"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-MMS9SQYP1B');
+	</script>
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
