--- a/coming-soon.html
+++ b/coming-soon.html
@@ -11,13 +11,23 @@
 	<!-- Website Title -->
 	<title>Coming Soon</title>
 	<!-- META DESCRIPTION -->
-    <meta name="description" content="Stay tuned for the launch of Abdul Ahad's website! Exciting updates and projects are on the way.">
+    	<meta name="description" content="Stay tuned for the launch of Abdul Ahad's website! Exciting updates and projects are on the way.">
 	<!-- META KEYWORDS -->
 	<meta name="keywords" content="Abdul Ahad, Coming Soon, website launch, anticipation, countdown">
 	<!-- META AUTHOR -->
 	<meta name="author" content="Abdul Ahad">
 	<!-- Required end meta tags -->
 	<link rel="icon" href="assets/images/favicon.ico" type="image/png">
+	<link href="https://abdulahad.site/coming-soon.html" rel="canonical">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMS9SQYP1B"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-MMS9SQYP1B');
+	</script>
 	<link rel="stylesheet" type="text/css" href="vendors/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="vendors/animate/animate.css">
