--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<meta name="author" content="Abdul Ahad">
 	<!-- Required end meta tags -->
 	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-	<link href="https://abdulahad.site/about" rel="canonical">
+	<link href="https://abdulahad.site/about.html" rel="canonical">
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMS9SQYP1B"></script>
 	<script>
