--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
 							<h3><span>Mern Stack Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://www.facebook.com/abdulahad2233.ar" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="https://www.facebook.com/dev.abdulahad" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="https://github.com/AR-AbdulAhad" target="_blank" title="GitHub"><i class="fa fa-github"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/dev-abdul-ahad" target="_blank" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
 									<li><a href="https://wa.me/+923158359722" target="_blank" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
