--- a/about.html
+++ b/about.html
@@ -56,7 +56,6 @@
 							<li class="nav-item"><a class="nav-link" href="portfolio.html" title="Portfolio">Portfolio</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html" title="Contact">Contact</a></li>
 							<li class="nav-item"><a class="nav-link" href="coming-soon.html" title="Templates">Templates</a></li>
-							<li class="nav-item"><a class="nav-link" href="coming-soon.html" title="Intern Portal">Intern Portal</a></li>
 						</ul>
 					</div>
 				</div>
@@ -350,7 +349,7 @@
                             <h4>Follow Me</h4>
                         </div>
                         <div class="footer_social">
-							<a href="https://www.facebook.com/abdulahad2233.ar" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/dev.abdulahad" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
 							<a href="https://github.com/AR-AbdulAhad" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
 							<a href="https://www.linkedin.com/in/dev-abdul-ahad" target="_blank" title="linkedin"><i class="fa fa-linkedin"></i></a>
 							<a href="https://wa.me/+923158359722" target="_blank" title="Whatsapp"><i class="fa fa-whatsapp"></i></a>
