--- a/about.html
+++ b/about.html
@@ -359,7 +359,7 @@
                             <h4>Follow Me</h4>
                         </div>
                         <div class="footer_social">
-							<a href="https://www.facebook.com/dev.abdulahad" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/@syedabdulahad.coder" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
 							<a href="https://github.com/AR-AbdulAhad" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
 							<a href="https://www.linkedin.com/in/dev-abdul-ahad" target="_blank" title="linkedin"><i class="fa fa-linkedin"></i></a>
 							<a href="https://wa.me/+923158359722" target="_blank" title="Whatsapp"><i class="fa fa-whatsapp"></i></a>
